fix(content-switcher): fixed the rulers being off on safari

--- a/src/components/ColorTokenTable/color-token-table.scss
+++ b/src/components/ColorTokenTable/color-token-table.scss
@@ -77,6 +77,7 @@ h3.page-h3--sticky {
   .bx--content-switcher-btn:not(:last-of-type)::after {
   height: 24px;
   right: -1px;
+  top: 12px;
 }
 
 .color-token-value {
